fix: Corregir color de elemento span para tener visibilidad

--- a/react-app/src/components/containers/stripe-card-form/styles.scss
+++ b/react-app/src/components/containers/stripe-card-form/styles.scss
@@ -4,9 +4,8 @@
     width: 100% !important;
     border-radius: 10px;
     height: 45px;
-    color: #fb177d !important;
     span {
-      color: white;
+      color: white !important;
       font-weight: bold;
     }
   }
